configs/2 - frontend/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proj7-fe
  #namespace: devops-jkpraja
spec:
  selector:
    matchLabels:
      app: proj7-fe
  template:
    metadata:
      labels:
        app: proj7-fe
    spec:
      containers:
      - name: proj7-fe
        image: jkpraja/fe:latest
        #resources:
        #  limits:
        #    memory: "128Mi"
        #    cpu: "500m"
        ports:
        - containerPort: 3000
