configs/2 - frontend/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proj7-fe-service
spec:
  selector:
    app: proj7-fe
  #type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    #nodePort: 30000
