configs/2 - frontend/ingress-fe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proj7-ingress-fe
  labels:
    name: proj7-ingress-fe
spec:
 # tls:
 # - hosts:
 #   - kube.c2loud.com
 #   secretName: proj7-secret-tls
  ingressClassName: nginx
  rules:
  - host: frontend.c2loud.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: proj7-fe-service
            port: 
              number: 80
      #- pathType: Prefix
      #  path: "/backend"
      #  backend:
      #    service:
      #      name: proj7-be-service
      #      port:
      #        number: 80
